# Python-2022

./: README.md
hw_1/: README.md  main.py  pyproject.toml  requirements.txt  setup.cfg
hw_1/src/fibs_ast_drawer/: main.py
hw_2/: Dockerfile  README.md  main.py  tables_to_tex.py  wrap_to_tex_document.py
hw_2/artifacts/: LINK_TO_TESTPYPI.md  output.tex
hw_2/src/: main.py  pictures_to_tex.py
hw_3/artifacts/easy/: matrix*.txt
hw_3/artifacts/hard/: AB.txt  C.txt  D.txt
hw_3/artifacts/medium/: matrix+.txt  matrix@.txt
hw_3/src/: main.py  my_matrix.py  numpy_matrix.py
hw_4/artifacts/: easy_fibs.txt
hw_4/artifacts/easy/: fibs.txt
hw_4/artifacts/hard/: interaction.txt
hw_4/artifacts/medium/: measurements.txt
hw_4/artifacts/medium/logs/: process-pool-1  process-pool-1-1  process-pool-1-10  process-pool-1-100  process-pool-2  process-pool-2-1  process-pool-2-10  process-pool-2-100  process-pool-3  process-pool-3-1  process-pool-3-10  process-pool-3-100  process-pool-4  process-pool-4-1  process-pool-4-10  process-pool-4-100  process-pool-5  process-pool-5-1  process-pool-5-10  process-pool-5-100  process-pool-6  process-pool-6-1  process-pool-6-10  process-pool-6-100  process-pool-7  process-pool-7-1  process-pool-7-10  process-pool-7-100  process-pool-8  process-pool-8-1  process-pool-8-10  process-pool-8-100  thread-pool-1  thread-pool-2  thread-pool-3  thread-pool-4  thread-pool-5  thread-pool-6  thread-pool-7  (+1 more)
hw_4/src/: easy_fibs.py  hard_processes.py  medium_integrate.py  utils.py
hw_5/src/: download_pics.py  proxies_pool.py  rent_scraper.py
