[metadata]
name = fibs_ast_drawer_by_dameron78
version = 0.0.2
author = dameron78
description = Package to draw AST of fibonacci generator function.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GlebSolovev/Python-2022
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = fibs_ast_drawer
python_requires = >=3.8